p-grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
## Memaksa jalan di https
# nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: grafana.aushafy.my.id
## Service Location n Characters
    http:
      paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 80
